    (Minsu Ghim, Seoul National U.)
  * GWL iterative Www method from JCTC 15 (6) 3710, 2019: Joshua Elliot 
    (U. Manchester), N. Colonna, M. Marsili, N. Marzari, P. Umari
  * Many-Body Dispersion (MBD) correction: Szabolcs Goger (U. Luxembourg),
    Hsin-Yu Ko (Cornell), et al.
  * Support for GPU via CUDA Fortran brought to the main repository

Fixed in development version:
  * Fictitious charge particle (FCP) works again. [arXiv:2012.10090]
  * Bugfix in HP: the hp.x calculation was not stopping smoothly when
    "perturb_only_atom" was used (this bug is not present in earlier 
    versions, i.e. <6.7)
  * Phonon restart was broken in some cases due to bad occupations
    written to xml file
  * ELF with nspin=2 was not correct (noticed by Dong Yang, JSG)
  * "cube" file with data interpolated by B-splines was not correct 
    (fixed by Satomichi Nisihara)
  * Dumb and horrible bug in PAW relativistic calculations (QE 6.7 only):
    a bad tag name was searched for in PP, leading to a small but non
    negligible error. Noticed by Minkyu Park (Univ. of Ulsan, Rep. of Korea).
  * Solution to the long-standing problem of non-monotonic N(E) in 
    Methfessel-Paxton and Marzari-Vanderbilt smearing, occasionally resulting 
    in an incorrect choice of the Fermi energy (Flaviano José dos Santos, EPFL).
    Results, in particular for the Fermi energy, may change a little bit, but
    either they are the same or are systematically improved wrt previous ones.
  * There was a missing 2pi/a factor in the case of loto_2d = .true.. Found 
    and explained in M. Royo and M. Stengel, https://arxiv.org/abs/2012.07961.
  * The rho => 0 limit of spin-polarized BEEF XC energy was not correct,
    leading to funny total energy numbers and problems in structural optimization
    (fixed by Gabriel S. Gusmão, Georgia Tech)
  * In some cases the new xml code of v.6.7 wrote UPF files that could not be read