@@ -135,9 +135,9 @@ SUBROUTINE do_elf (elf)
   !          aux --> charge density in Fourier space
   !         aux2 --> iG * rho(G)
   !
-  ALLOCATE ( tbos(2,dfftp%nnr), aux2(dfftp%nnr) )
+  ALLOCATE ( tbos(dfftp%nnr,2), aux2(dfftp%nnr) )
   !
-  ! put the total (up+down) charge density in rho%of_r(*,1)
+  ! set rho%of_r(:,1) = spin up, rho%of_r(:,2) = spin down charge
   !
   IF (nspin == 1) THEN
      rho%of_r (:, 2) = 0.d0
@@ -146,8 +146,7 @@ SUBROUTINE do_elf (elf)
   rho%of_r (:, 1) =  rho%of_r (:, 1) - rho%of_r (:, 2)
 
   DO k = 1, 2
-     tbos(k, :) = 0.d0
-     
+     tbos(:,k) = 0.d0
      aux(:) = cmplx( rho%of_r(:, k), 0.d0 ,kind=DP)
      CALL fwfft ('Rho', aux, dfftp)
      !
@@ -164,19 +163,20 @@ SUBROUTINE do_elf (elf)
 
         CALL invfft ('Rho', aux2, dfftp)
         DO i = 1, dfftp%nnr
-           tbos (k, i) = tbos (k, i) + dble(aux2(i))**2
+           tbos (i, k) = tbos (i, k) + dble(aux2(i))**2
         ENDDO
      ENDDO
   ENDDO
   !
-  ! Calculates ELF
+  ! Calculate ELF
   !
   fac = 5.d0 / (3.d0 * (6.d0 * pi**2) ** (2.d0 / 3.d0) )
   elf(:) = 0.d0
   DO i = 1, dfftp%nnr
-     IF ((rho%of_r (i,1) > 1.d-30).and.(rho%of_r (i,2) > 1.d-30)) THEN
-        d = fac/(rho%of_r(i,1)**(5d0/3d0)+rho%of_r(i,2)**(5d0/3d0)) &
-                *(kkin(i)-0.25d0*tbos(1,i)/rho%of_r(i,1)-0.25d0*tbos(2,i)/rho%of_r(i,2)+1.d-5)
+     IF ( (rho%of_r (i,1) > 1.d-30).and.(rho%of_r (i,2) > 1.d-30) ) THEN
+        d = fac / ( rho%of_r(i,1)**(5d0/3d0) + rho%of_r(i,2)**(5d0/3d0) ) &
+             *(kkin(i) - 0.25d0*tbos(i,1)/rho%of_r(i,1) - &
+                         0.25d0*tbos(i,2)/rho%of_r(i,2) + 1.d-5)
         elf (i) = 1.0d0 / (1.0d0 + d**2)
      ENDIF
   ENDDO
@@ -215,7 +215,8 @@ SUBROUTINE do_rdg (rdg)
      IF (rho%of_r(i,1) > rho_cut) THEN
         rdg(i) = fac * 100.d0 / abs(rho%of_r(i,1))**(4.d0/3.d0)
      ELSE
-        rdg(i) = fac * sqrt(grho(1,i)**2 + grho(2,i)**2 + grho(3,i)**2) / abs(rho%of_r(i,1))**(4.d0/3.d0)
+        rdg(i) = fac * sqrt(grho(1,i)**2 + grho(2,i)**2 + grho(3,i)**2) &
+                     / abs(rho%of_r(i,1))**(4.d0/3.d0)
      ENDIF
   ENDDO
   
@@ -224,47 +225,6 @@ SUBROUTINE do_rdg (rdg)
   RETURN
 
 END SUBROUTINE do_rdg
-
-
-
-!-----------------------------------------------------------------------
-SUBROUTINE do_rdg_ (rdg)
-  !-----------------------------------------------------------------------
-  !
-  !  reduced density gradient
-  !     rdg(r) = (1/2) (1/(3*pi**2))**(1/3) * |\nabla rho(r)|/rho(r)**(4/3)
-  !
-  USE kinds,                ONLY: DP
-  USE constants,            ONLY: pi
-  USE fft_base,             ONLY: dfftp
-  USE scf,                  ONLY: rho
-  USE gvect,                ONLY: g, ngm
-  USE lsda_mod,             ONLY: nspin
-  IMPLICIT NONE
-  REAL(DP), INTENT(OUT) :: rdg (dfftp%nnr)
-  REAL(DP), ALLOCATABLE :: grho(:,:)
-  REAL(DP) :: fac
-  REAL(DP), PARAMETER :: rho_cut = 0.05d0
-  INTEGER :: is, i
-
-  fac = (1.d0/2.d0) * 1.d0/(3.d0*pi**2)**(1.d0/3.d0)
-  ! gradient of rho
-  ALLOCATE( grho(3,dfftp%nnr) )
-
-  CALL fft_gradient_g2r(dfftp, rho%of_g(1,1), g, grho)
-
-  ! calculate rdg
-  DO i = 1, dfftp%nnr
-     rdg(i) = fac * sqrt(grho(1,i)**2 + grho(2,i)**2 + grho(3,i)**2) / abs(rho%of_r(i,1))**(4.d0/3.d0)
-  ENDDO
-
-  DEALLOCATE( grho )
-  
-  RETURN
-
-END SUBROUTINE do_rdg_
-
-
 
 !-----------------------------------------------------------------------
 SUBROUTINE do_sl2rho (sl2rho)
@@ -291,12 +251,6 @@ SUBROUTINE do_sl2rho (sl2rho)
 
   ! gradient and hessian of rho
   ALLOCATE( grho(3,dfftp%nnr), hrho(3,3,dfftp%nnr) )
-
-  ! put the total (up+down) charge density in rho%of_r(*,1)
-  !DO is = 2, nspin
-  !   rho%of_g(:,1) =  rho%of_g(:,1) + rho%of_g(:,is)
-  !   rho%of_r(:,1) =  rho%of_r(:,1) + rho%of_r(:,is)
-  !ENDDO
 
   ! calculate hessian of rho (gradient is discarded)
   CALL fft_hessian( dfftp, rho%of_r(:,1), g, grho, hrho )
@@ -331,9 +285,6 @@ SUBROUTINE do_sl2rho (sl2rho)
 
 END SUBROUTINE do_sl2rho
 
-
-
-
 !-----------------------------------------------------------------------
 SUBROUTINE do_dori (dori)
   !-----------------------------------------------------------------------
@@ -342,7 +293,7 @@ SUBROUTINE do_dori (dori)
   ! theta(r) = 4 * (laplacian(rho(r)) * grad(rho(r)) * rho(r) 
   !            + | grad(rho(r)) |**2 * grad(rho(r)))
   !            / (| grad(rho(r)) |**2)**3
-  ! DORI(r) = theta(r) / (1 = theta(r))
+  ! DORI(r) = theta(r) / (1 + theta(r))
 
   USE kinds,                ONLY: DP
   USE constants,            ONLY: pi
