@@ -9,6 +9,7 @@ New in development version:
   * Many-Body Dispersion (MBD) correction: Szabolcs Goger (U. Luxembourg),
     Hsin-Yu Ko (Cornell), et al.
   * Support for GPU via CUDA Fortran brought to the main repository
+  * Calculation of DORI and of ELF for nspin=2 (Dong Yang, Qin Liu, JSG)
 
 Fixed in development version:
   * Fictitious charge particle (FCP) works again. [arXiv:2012.10090]
@@ -36,6 +37,7 @@ Fixed in development version:
   * In some cases the new xml code of v.6.7 wrote UPF files that could not be read
     because they contained too long lines (noticed by Felix Goudreault, U. Montreal)
   * Variable-cell hybrid DFT fixed: it was broken since v.6.5.
+  * Small random errors in some XC spin-polarized functionals in OMP execution
 
 Incompatible changes in development version:
   * lfcpopt & lfcpdyn are replaced by lfcp. Only static optimization of the
